--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.0
 beckett==0.8.0
+dj-database-url==0.5.0
 Django==4.0.3
+django-heroku==0.0.0
 gunicorn==20.1.0
 inflect==0.2.5
 Pillow==9.1.0
@@ -9,3 +11,4 @@ python-decouple==3.6
 requests==2.10.0
 six==1.10.0
 sqlparse==0.4.2
+whitenoise==6.0.0
