--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==20.1.0
 inflect==0.2.5
 Pillow==9.1.0
 pokepy==0.4.0
+psycopg2-binary==2.9.3
 python-decouple==3.6
 requests==2.10.0
 six==1.10.0
